--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@300;400&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Blog While True: ++ coffee</title>
 </head>
 
 <body>
