--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
                         </p>
                         <!-- Formulário -->
                         <form class="form-contato">
-                        <div>
+                        <div class="form-group">
                             <label for="nome">Nome:</label>
                             <input type="text" id="nome" name="nome" required>
                         </div>
                         
-                        <div>
+                        <div class="form-group">
                             <label for="email">Email:</label>
                             <input type="email" id="email" name="email" required>
                         </div>
                         
-                        <div>
+                        <div class="form-group">
                             <label for="mensagem">Mensagem:</label>
                             <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
                         </div>
